test/bad/b27.erl
-module(b27).

f(X) ->
    case X of
        true        -> 1;
        false       -> ""
    end.